--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,21 @@
 .d-flex{
     margin-left: 10px;
 }
+.navbar-brand{
+  font-family: 'Readex Pro', sans-serif;
+    color:#ffffffff;
+    font-size: 30px;
+}
+.nav-link{
+  font-family: 'Montserrat', bold;
+  color: #EDE7F6;
+}
+
+.navbar{
+  background-color: #6761e2ab;
+}
+.btn{
+  font-family: 'Readex Pro', sans-serif;
+  background-color: #06ffeeb9;
+  color: #ffffff;
+}
