--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -4,20 +4,21 @@
     box-sizing: border-box;
 }
 
-body {
+.row {
     
-    height: 690px;
+    padding-top: 90px;
+    padding-bottom: 50px;
     width:100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background:url(https://fondosmil.com/fondo/20936.jpg);
+    background-image: url('/assets/fondo-header.jpg');
 
    
 }
 
 .login {
-    width: 360px;
+    width: 1000px;
     height: min-content;
     padding: 20px;
     border-radius: 12px;
@@ -28,12 +29,26 @@ body {
 .login h1 {
     font-size: 36px;
     margin-bottom: 25px;
+    font-family: 'Readex Pro', sans-serif;
+    color:#2b06ffb9;
 }
 
-.login form {
+.login p {
     font-size: 20px;
+    margin-bottom: 25px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+.login form {
+    font-family: 'Readex Pro', sans-serif;
+    font-size: 15px;
+    color: #575757;
 }
 
+.form-control{
+    padding: 10px;
+
+}
 .login form .form-group {
     margin-bottom: 12px;
 }
@@ -42,3 +57,28 @@ body {
     font-size: 20px;
     margin-top: 15px;
 }
+
+#img-login img{
+    height: 400px;
+}
+
+#img-login p {
+    font-size: 15px;
+    margin-bottom: 25px;
+    font-family: 'Montserrat';
+    text-align: center;
+}
+#btns{
+    margin-top: 30px;
+    justify-content: center;
+    text-align: center;
+
+}
+.btn{
+    font-family: 'Readex Pro', sans-serif;
+  width: fit-content;
+    color: #ffffff;
+    background-color: rgb(108, 63, 255);
+    margin: 5px;
+}
+
