Modificacion en el css del avatar y el nombre de usuario en el header. Se modifico la vista del principal administrador y se elimino el sidevar, se cambio por los breadcrumb

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -19,3 +19,12 @@
   background-color: #06ffeeb9;
   color: #ffffff;
 }
+.dropdown ngx-avatar{
+  margin-right: 10px;
+  font-family: 'Readex Pro';
+}
+.dropdown strong{
+  font-family: 'Readex Pro', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+}
