--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,10 +19,11 @@
               <a class="nav-link" [routerLink]="'calendar'">Calendario</a>
           </li>
         </ul> 
+     
         <form class="d-flex">
           <div class="dropdown" *ngIf="loginService.userLoggedIn()">
-            <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-              <ngx-avatar size="50" name="{{loginService.userLogged()}}"></ngx-avatar>
+            <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+              <ngx-avatar bgColor="#1c12e5ab" size="50" name="{{loginService.userLogged()}}"></ngx-avatar>
               <strong>{{loginService.userLogged()}}</strong>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
