--- a/src/app/components/principal-admi/principal-admi.component.css
+++ b/src/app/components/principal-admi/principal-admi.component.css
@@ -7,61 +7,21 @@
   margin: 0px;
   padding: 0px;
   background-image: url('/assets/fondo-header.jpg');
+  background-size:cover;
 }
 #inicio{
   padding: 20px;
   height: auto;
 }
-#item:hover{
-    background: white;
-    color: rgb(94, 49, 230);
-    cursor: pointer;
-
-}
-#wrapper {
-  overflow-x: hidden;
-}
-
-#sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
- 
- 
-}
-
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
-}
-
-#sidebar-wrapper .list-group {
-  width: 15rem;
-}
-
-#page-content-wrapper {
-  min-width: 100vw;
-}
-
-body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-  margin-left: 0;
-}
-
-@media (min-width: 768px) {
-  #sidebar-wrapper {
-    margin-left: 0;
-  }
-
-  #page-content-wrapper {
-    min-width: 0;
-    width: 100%;
-  }
-
-  body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-    margin-left: -15rem;
-  }
+.text-center{
+  margin-top: 60px;
 }
 .card{
   margin: 5px;
+  height: 450px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 #container-cards{
   width:fit-content;
@@ -72,4 +32,21 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   color:#ffffff;
   text-align: center;
   font-size: 50px;
+}
+.btn{
+  font-family: 'Readex Pro', sans-serif;
+  background-color: #7416f7;
+  color: #ffffff;
+}
+.card-title{
+  font-family: 'Readex Pro', sans-serif;
+  color:#6200EA;
+}
+.card-text{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+nav h6{
+  font-family: 'Readex Pro', sans-serif;
+  font-size: 25px;
 }
