--- a/src/app/components/principal-participante/principal-participante.component.css
+++ b/src/app/components/principal-participante/principal-participante.component.css
@@ -1,47 +1,61 @@
-#item:hover{
-    background: white;
-    color: darkblue;
-    cursor: pointer;
-
+.row{
+  margin: 0px;
+  padding: 0px;
+  margin-top: 70px;
 }
-#wrapper {
-  overflow-x: hidden;
+.container-fluid{
+  margin: 0px;
+  padding: 0px;
+  background-image: url('/assets/fondo-header.jpg');
+  background-size:cover;
+  justify-content: center;
+
+  align-items: center;
 }
-
-#sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
- 
+#inicio{
+  padding: 20px;
+  height: auto;
 }
-
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+.text-center{
+  margin-top: 60px;
 }
-
-#sidebar-wrapper .list-group {
-  width: 15rem;
+.card{
+  margin: 5px;
+  height: 450px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
-
-#page-content-wrapper {
-  min-width: 100vw;
+.card img{
+  height: 250px;
 }
-
-body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-  margin-left: 0;
+#container-cards{
+  width:fit-content;
+  height: auto;
+ justify-content: center;
+  text-align: center;
+  align-items: center;
 }
-
-@media (min-width: 768px) {
-  #sidebar-wrapper {
-    margin-left: 0;
-  }
-
-  #page-content-wrapper {
-    min-width: 0;
-    width: 100%;
-  }
-
-  body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-    margin-left: -15rem;
-  }
+#flecha{
+  justify-content: center;
+  color:#ffffff;
+  text-align: center;
+  font-size: 50px;
+}
+.btn{
+  font-family: 'Readex Pro', sans-serif;
+  background-color: #7416f7;
+  color: #ffffff;
+}
+.card-title{
+  font-family: 'Readex Pro', sans-serif;
+  color:#6200EA;
+}
+.card-text{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+nav h6{
+  font-family: 'Readex Pro', sans-serif;
+  font-size: 25px;
 }
