--- a/src/app/components/agenda/agenda.component.html
+++ b/src/app/components/agenda/agenda.component.html
@@ -1,1 +1,151 @@
-<p>agenda works!</p>
+<div class="container-fluid">
+    <!-- Header -->
+    <div id="header" class="text-center bg-image">
+     <div class="mask">
+       <div class="d-flex justify-content-center align-items-center h-100">
+         <div class="text-white">
+       
+           <h1 class="mb-3">Agenda de audiencias</h1>
+            <!-- Breadcrumb -->
+            <nav class="d-flex">
+             <h6 class="mb-0">
+               <a  [routerLink]="['principal/Participante']" class="text-reset">Home</a>
+               <span>/</span>
+               <a href="#" class="text-reset">Agenda </a>
+             </h6>
+           </nav>
+           <!-- Breadcrumb -->
+         </div>
+       </div>
+     </div>
+   </div>
+  
+   <div class="row">
+    
+     <div>
+           <!-- Calendario -->
+       <div id="contenedor-calendario">
+         <div class="row text-center">
+           <div class="col">
+             <div class="btn-group">
+               <div
+                 class="btn btn-primary"
+                 mwlCalendarPreviousView
+                 [view]="view"
+                 [(viewDate)]="viewDate"
+                 (viewDateChange)="closeOpenMonthViewDay()"
+               >
+                 Anterior
+               </div>
+               <div
+                 class="btn btn-outline-secondary"
+                 mwlCalendarToday
+                 [(viewDate)]="viewDate"
+               >
+                 Hoy
+               </div>
+               <div
+                 class="btn btn-primary"
+                 mwlCalendarNextView
+                 [view]="view"
+                 [(viewDate)]="viewDate"
+                 (viewDateChange)="closeOpenMonthViewDay()"
+               >
+                 Siguiente
+               </div>
+             </div>
+           </div>
+           <div class="col">
+             <h3 class="tituloMes">{{ viewDate | calendarDate:(view + 'ViewTitle'):'es' }}</h3>
+           </div>
+           <div class="col">
+             <div class="btn-group">
+               <div
+                 class="btn btn-primary"
+                 (click)="setView(CalendarView.Month)"
+                 [class.active]="view === CalendarView.Month"
+               >
+                 Mes
+               </div>
+               <div
+                 class="btn btn-primary"
+                 (click)="setView(CalendarView.Week)"
+                 [class.active]="view === CalendarView.Week"
+               >
+                 Semana
+               </div>
+               <div
+                 class="btn btn-primary"
+                 (click)="setView(CalendarView.Day)"
+                 [class.active]="view === CalendarView.Day"
+               >
+                 Dia
+               </div>
+             </div>
+           </div>
+         </div>
+         <br />
+         <div [ngSwitch]="view">
+           <mwl-calendar-month-view
+             *ngSwitchCase="CalendarView.Month"
+             [viewDate]="viewDate"
+             [events]="events"
+             [refresh]="refresh"
+             [activeDayIsOpen]="activeDayIsOpen"
+             (dayClicked)="dayClicked($event.day)"
+             (eventClicked)="handleEvent('Clicked', $event.event)"
+             (eventTimesChanged)="eventTimesChanged($event)"
+             [locale]="locale"
+           >
+           </mwl-calendar-month-view>
+           <mwl-calendar-week-view
+             *ngSwitchCase="CalendarView.Week"
+             [viewDate]="viewDate"
+             [events]="events"
+             [refresh]="refresh"
+             (eventClicked)="handleEvent('Clicked', $event.event)"
+             (eventTimesChanged)="eventTimesChanged($event)"
+             [locale]="locale"
+           >
+           </mwl-calendar-week-view>
+           <mwl-calendar-day-view
+             *ngSwitchCase="CalendarView.Day"
+             [viewDate]="viewDate"
+             [events]="events"
+             [refresh]="refresh"
+             (eventClicked)="handleEvent('Clicked', $event.event)"
+             (eventTimesChanged)="eventTimesChanged($event)"
+             [locale]="locale"
+           >
+           </mwl-calendar-day-view>
+         </div>
+ 
+       </div>
+     </div>
+       
+   </div>
+  
+   
+   
+ </div>
+  
+   <ng-template #modalContent let-close="close">
+     <div class="modal-header">
+       <button type="button" class="close" (click)="close()">
+         <span aria-hidden="true">&times;</span>
+       </button>
+     </div>
+     <div class="modal-body">
+      
+       <div>
+         Datos de la reunion:
+         <pre>{{ modalData?.event | json }}</pre>
+         
+       </div>
+     </div>
+     <div class="modal-footer">
+       <button type="button" class="btn btn-outline-secondary" (click)="close()">
+         OK
+       </button>
+     </div> 
+ 
