--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg text-light fixed-top">
+<nav class="navbar navbar-expand-lg text-light">
     <div class="container-fluid">
       <a class="navbar-brand"><i class="fa-brands fa-guilded"></i> gathering!</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
